--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -57,7 +57,7 @@
     <button type="submit" class="btn btn-primary mt-2">Login</button>
         <div class="mt-3"> 
             New Member ?<a class="mt-4" routerLink="/register" routerLinkActive="active" >Register Now</a>
-           <p><a routerLink="">Forgot password</a> </p>
+           <p><a routerLink="/forgot" routerLinkActive="active">Forgot password</a> </p>
     </div>
 </form>
 
