--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 <div class=" container my-5 p-5" style="border: 1px solid black; ">
-   <div style="text-align: center;"> <b><h3>Employee Login </h3></b></div>
+   <div style="text-align: center;"> <b><h3> </h3></b></div>
      
     <form   class="col-md-4 offset-md-4" >
     
@@ -41,7 +41,7 @@
     </div>
     
     
-    <button type="submit" class="btn btn-primary mt-2">Login</button>
+    <button type="submit" class="btn btn-primary mt-2">Send</button>
          
 </form>
 
